<resources>
    <string name="app_name">CWS</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add_transaction">Add transaction</string>
    <string name="ft_cancel">Cancel</string>
    <string name="ft_done">Done</string>
    <string name="ft_income">Income</string>
    <string name="ft_expense">Expense</string>
    <string name="ft_select_account">Select account</string>
    <string name="ft_select_category">Select category</string>
    <string name="ft_select_amount">Enter amount</string>
    <string name="ft_trnsaction_canceled">Transaction canceled</string>
    <string name="ft_transaction_saved">Transaction saved</string>
    <string name="ft_data_error">You have entered insufficient data</string>
    <string name="yes_delete">Yes,Delete</string>
    <string name="delete_transaction">Delete Transaction?</string>
</resources>
