<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/fdTitleTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray_80"
        android:gravity="center_horizontal"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/add_transaction"
        android:textAlignment="center"
        android:textAppearance="@style/FragmentTitle"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ftCancelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/ft_cancel"
        app:layout_constraintBottom_toBottomOf="@+id/fdTitleTv"
        app:layout_constraintStart_toStartOf="@+id/fdTitleTv"
        app:layout_constraintTop_toTopOf="@+id/fdTitleTv" />

    <TextView
        android:id="@+id/ftDoneTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:text="@string/ft_done"
        app:layout_constraintBottom_toBottomOf="@+id/fdTitleTv"
        app:layout_constraintEnd_toEndOf="@+id/fdTitleTv"
        app:layout_constraintTop_toTopOf="@+id/fdTitleTv" />

    <TextView
        android:id="@+id/ftIncomeTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_ft_income"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/ft_income"
        app:layout_constraintEnd_toStartOf="@+id/ftExpenseTv"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fdTitleTv" />

    <TextView
        android:id="@+id/ftExpenseTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_ft_expense"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="8dp"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:text="@string/ft_expense"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ftIncomeTv"
        app:layout_constraintTop_toTopOf="@+id/ftIncomeTv" />

    <Spinner
        android:id="@+id/ftAccountSp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ftIncomeTv" />

    <Spinner
        android:id="@+id/ftCategorySp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ftAccountSp" />

    <EditText
        android:id="@+id/ftAmountEt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@+id/ftCategorySp"
        app:layout_constraintTop_toBottomOf="@+id/ftCategorySp" />

</androidx.constraintlayout.widget.ConstraintLayout>